--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
     "swr": "^2.0.0",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.2.1",
     "uuid": "^9.0.0",
     "zustand": "^4.1.4"
